Added an extra link for testing

--- a/t/www/formPage.html
+++ b/t/www/formPage.html
@@ -10,6 +10,8 @@
     </script>
 </head>
 <body>
+<a href="http://www.google.com">Google Home Page Link</a><br/><br/>
+
 There should be a form here:
 
 <form method="get" action="resultPage.html" name="login">
