link changed to localhost page

--- a/t/www/formPage.html
+++ b/t/www/formPage.html
@@ -10,7 +10,7 @@
     </script>
 </head>
 <body>
-<a href="http://www.google.com">Google Home Page Link</a><br/><br/>
+<a href="/index.html">Home Page Link</a><br/><br/>
 
 There should be a form here:
 
