added alert methods to the modules

--- a/t/www/alerts.html
+++ b/t/www/alerts.html
@@ -10,8 +10,10 @@
 
 <p>This tests alerts: <a href="#" id="alert" onclick="alert('cheese');">click me</a></p>
 
-<p>This is a test of a confirm: <a href="simpleTest.html" id="confirm"
-                                   onclick="return confirm('Are you sure?');">test confirm</a></p>
+
+<p>This is a test of a prompt: <a href="#" id="prompt" onclick="alert(prompt('Enter your name'));">test prompt</a></p>
+
+<p>This is a test of a confirm: <a href="#" id="confirm" onclick="alert(confirm('Are you sure?'));">test confirm</a></p>
 
 </body>
 </html>
