--- a/t/www/index.html
+++ b/t/www/index.html
@@ -69,5 +69,7 @@ document.write(" and with document.write again");
   <span id="displayed">I am displayed.</span>
   <span id="hidden" style="display: none;">I am hidden.</span>
 </div>
+
+<div id="äëïöü"></div>
 </body>
 </html>
